ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
======================================================================

* V1.22.2
- Merge in 64-bit int capability
- Remove offset memory model, PAGE, HIMEM and indirection operators now
  use actual memory locations.

* V1.22.1
- Make the old BASIC I-IV compatible integer mathematics available via a
  run-time switchable setting.
- Integer addition and subtraction will now return integer if it fits, else a
  float. (Legacy mode: unchanged, will always return an int, with wraparound).
- Integer multiplication follows new code path at all times, old int-only
  implementation didn't match any Acorn BBC BASIC version and is thus a bug.
- Fixed stack pointer leak bug.
- Fixed behaviour setting HIMEM immediately after LOADing a file
- SYS "Brandy_GetVideoDriver" extended, returns MODE 7 framebuffer base in R4.
- RISC OS style sound working. MANY thanks to David Hawes.
- Separate out segfault memory error to its own error message.
- Fix pass-back of strings from SYS on 64-bit systems.
- Fix sound with volume = 0 (Thanks David Hawes)
- Sound updates in StringLib family (Thanks David Hawes)
- Bug fix for VAL - it should ONLY handle decimal numbers (not hex or binary)
- Fix flood fill (it just didn't work right), new implementation is however
  quite memory hungry and recursive.
- Signal handler updated, longjmps now use siglongjmp. check_read() and
  check_write() no longer required. Note this also allows a program to trample
  on the BASIC stack.
- Many keyboard updates (Thanks Jonathan Harston)

* V1.22.0 - 23 July 2019
- Change identifier to BASIC VI (which is BASIC V with 64-bit FP maths, which
  is what Brandy has always done)
- *SPOOL and *SPOOLON implemented.
- Fix integer overflows when converting from floats.
- Fix intermittent crash when execution hits a DEF statement.
- Added a run-time switchable setting for INT() whether it can process