@@ -1612,7 +1612,11 @@ static void fn_val(void) {
     memmove(basicvars.stringwork, descriptor.stringaddr, descriptor.stringlen);
     basicvars.stringwork[descriptor.stringlen] = asc_NUL;
     if (stringtype == STACK_STRTEMP) free_string(descriptor);
-    cp = todecimal(basicvars.stringwork, &isint, &intvalue, &int64value, &fpvalue);
+    if (matrixflags.extendval) {
+      cp = tonumber(basicvars.stringwork, &isint, &intvalue, &int64value, &fpvalue);
+    } else {
+      cp = todecimal(basicvars.stringwork, &isint, &intvalue, &int64value, &fpvalue);
+    }
     if (cp == NIL) {	/* Error found when converting number */
       error(intvalue);	/* 'intvalue' is used to return the precise error */
     }
