@@ -386,8 +386,12 @@ void mos_sys_ext(int64 swino, int64 inregs[], int64 outregs[], int32 xflag, int6
       break;
     case SWI_Brandy_Hex64:
         matrixflags.hex64 = inregs[0];
+        break;
     case SWI_Brandy_DELisBS:
         matrixflags.delcandelete = inregs[0];
+      break;
+    case SWI_Brandy_ExtendVAL:
+        matrixflags.extendval = inregs[0];
       break;
     case SWI_RaspberryPi_GPIOInfo:
       outregs[0]=matrixflags.gpio; outregs[1]=(matrixflags.gpiomem - basicvars.offbase);
